Added session test Added local address binding

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "./lib/smpp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/farhadi/node-smpp.git"
+    "url": "https://github.com/dublicator/node-smpp.git"
   },
   "license": "MIT",
   "scripts": {
